# playready-rs

./: Cargo.toml  README.md
.github/workflows/: docs.yml
crates/playready/: Cargo.toml
crates/playready-cli/: Cargo.toml
crates/playready-cli/src/: main.rs
crates/playready-ffi/: Cargo.toml  README.md  playready.h
crates/playready-ffi/src/: lib.rs
crates/playready-macros/: Cargo.toml
crates/playready-macros/src/: lib.rs
crates/playready/src/: cdm.rs  certificate.rs  device.rs  error.rs  lib.rs  license.rs  pssh.rs  xml_key.rs  xml_utils.rs
crates/playready/src/binary_format/: bcert.rs  device.rs  mod.rs  pssh.rs  xmr_license.rs
crates/playready/src/crypto/: aes.rs  ecc_p256.rs  mod.rs  sha256.rs
