[package]
name = "playready-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
playready = { path = "../playready" }
colog = "1.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
isahc = "1.7"
log = "0.4"
