[package]
name = "playready-cli"
description = "Implementation of PlayReady DRM system based on pyplayready (CLI)"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
playready = { path = "../playready", version = "0.1.1-pre" }
colog = "1.3"
clap = { version = "4.5", features = ["derive"] }
isahc = "1.7"
log = "0.4"
