[package]
name = "playready-ffi"
description = "Implementation of PlayReady DRM system based on pyplayready (C bindings)"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
playready = { path = "../playready", version = "0.1.1-pre" }
safer-ffi = { version = "0.1", features = ["headers"] }
