[package]
name = "playready"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
binrw = "0.14"
cbc = { version = "0.1" }
cmac = "0.7"
ecb = { version = "0.1", features = ["std"] }
elastic-elgamal = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "std"] }
rand = "0.8"
roxmltree = "0.20"
sha2 = "0.10.8"
thiserror = "2.0"
uuid = "1.12"
xml-builder = "0.5"
